--- a/src/components/main-banner/MainBanner.css
+++ b/src/components/main-banner/MainBanner.css
@@ -1,14 +1,11 @@
-
-
 .convenience-banner {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 5px;
-  width: 100vw;
   margin: 20px auto;
-  font-family: 'Arial', sans-serif;
-  background-color: #D9D9D9;
+  font-family: "Arial", sans-serif;
+  background-color: #d9d9d9;
   max-height: fit-content;
 }
 
@@ -19,7 +16,6 @@
   width: 100%;
 }
 
-
 .stripe {
   height: 20px;
   width: 100%;
@@ -27,15 +23,15 @@
 }
 
 .one {
-  background-color: #527246; 
+  background-color: #527246;
 }
 
 .two {
-  background-color: #5A6556; /* FamilyMart green */
+  background-color: #5a6556; /* FamilyMart green */
 }
 
 .three {
-  background-color: #67A051; /* Common convenience store orange */
+  background-color: #67a051; /* Common convenience store orange */
 }
 
 .banner-text {
@@ -48,8 +44,7 @@
   width: 1180px;
   padding: 4px 10px;
   font-family: shantell-sans;
-  border-color: #21532B;
+  border-color: #21532b;
   border: 5px;
-  border-style: solid; 
+  border-style: solid;
 }
-
