--- a/src/components/product-card/ProductCard.css
+++ b/src/components/product-card/ProductCard.css
@@ -1,32 +1,32 @@
 .product-card {
+  width: 220px;
+  padding: 1rem;
+  color: white;
+  text-align: center;
   background-color: #44624a;
   border-radius: 12px;
-  padding: 1rem;
-  text-align: center;
-  color: white;
-  width: 220px;
 }
 
 .product-image {
   width: 100%;
   max-height: 180px;
-  border-radius: 16px;
-  object-fit: cover;
   margin-bottom: 1rem;
+  object-fit: cover;
+  border-radius: 16px;
 }
 
 .add-to-cart-button {
-  background-color: white;
+  display: inline-flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  margin-bottom: 0.75rem;
   color: #44624a;
   font-weight: bold;
-  padding: 0.5rem 1rem;
-  border-radius: 8px;
+  background-color: #d9d9d9;
   border: none;
+  border-radius: 8px;
   cursor: pointer;
-  display: inline-flex;
-  align-items: center;
-  gap: 0.5rem;
-  margin-bottom: 0.75rem;
 }
 
 .add-to-cart-button:hover {
@@ -38,13 +38,10 @@
   line-height: 1;
 }
 
-.product-name {
-  font-size: 1rem;
-}
 .product-name-link {
-  text-decoration: none;
   display: inline-block;
   margin-top: 0.5rem;
+  text-decoration: none;
   transition: color 0.2s ease;
 }
 
