--- a/src/components/promo-card/PromoCard.css
+++ b/src/components/promo-card/PromoCard.css
@@ -2,23 +2,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   background-color: #44624a;
   color: white;
   border-radius: 10px;
   padding: 1rem 1rem 1rem 2rem;
-
   height: 12vh;
-  max-width: 100%;
+  width: 25vw;
   margin: 0 0 1em 0;
-
   overflow: hidden;
 }
 
 .card-title {
-  font-size: 1.2rem;
   font-weight: 400;
-  width: 20vw;
+  width: 15vw;
+  display: flex;
   margin: 0 0 0.5rem 0;
 }
 
