--- a/src/components/promo-card/PromoCard.css
+++ b/src/components/promo-card/PromoCard.css
@@ -7,11 +7,18 @@
   border-radius: 10px;
   padding: 1rem 1rem 1rem 2rem;
   height: 12vh;
-  width: 25vw;
+  width: 25em;
   margin: 0 0 1em 0;
   overflow: hidden;
 }
-
+.promo-card-link {
+  text-decoration: none;
+  color: inherit;
+}
+.promo-card:hover {
+  background-color: #3a533f;
+  cursor: pointer;
+}
 .card-title {
   font-weight: 400;
   width: 15vw;
