--- a/src/components/textarea/TextArea.css
+++ b/src/components/textarea/TextArea.css
@@ -18,7 +18,9 @@
 .textarea-input {
   width: 100%;
   padding: 0.75rem;
-  border: 2px solid #ddd;
+  background-color: #ddd;
+  border: 2px solid #44624a;
+  color: #44624a;
   border-radius: 6px;
   font-size: 1rem;
   resize: vertical;
