--- a/src/pages/checkout-form-page/CheckoutFormPage.css
+++ b/src/pages/checkout-form-page/CheckoutFormPage.css
@@ -9,7 +9,7 @@
 
 .checkout-content-container {
   display: flex;
-  gap: 200px
+  gap: 200px;
 }
 
 .form-row {
@@ -51,25 +51,26 @@
 
 .discount-button {
   margin-top: 10px;
-  padding: 0.75rem
+  padding: 0.75rem;
 }
 
 .checkout-order-details {
   position: sticky;
-  top: 20px; 
-  background: #f9f9f9;
+  top: 20px;
+  background: #d9d9d9;
   padding: 2rem 3rem;
   border-radius: 8px;
   height: fit-content;
   max-height: calc(100vh - 100px);
   overflow-y: auto;
   overflow-x: hidden;
+  border: 1px solid #44624a;
 }
 
 .checkout-cost-breakdown {
   margin-top: 1.5rem;
   padding-top: 1.5rem;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #44624a;
 }
 
 .checkout-cost-row {
@@ -103,6 +104,7 @@
 
 .form-select {
   padding: 0.75rem;
+  color: #717171;
   border: 1px solid var(--card-foreground);
   border-radius: 4px;
   font-size: 1rem;
