--- a/src/components/promo-card/PromoCard.css
+++ b/src/components/promo-card/PromoCard.css
@@ -7,8 +7,7 @@
   border-radius: 10px;
   padding: 1rem 1rem 1rem 2rem;
   height: 12vh;
-  width: 40em;
-  max-width: 40vw;
+  width: 30vw;
   margin: 0 0 1em 0;
   overflow: hidden;
 }
